# cmake-sdl2-project-template

./: CMakeLists.txt  README.md  build.sh
cmake/: FindSDL2.cmake  windows.cmake
cmake/Modules/: FindSDL2.cmake
include/: cm_game.h  cm_input.h  cm_input_handler_sdl.h  cm_math.h  cm_renderer.h  cm_renderer_sdl_gpu.h
src/: CMakeLists.txt  cm_game.cpp  cm_input.cpp  cm_input_handler_sdl.cpp  cm_math.cpp  cm_renderer_sdl_gpu.cpp  main.cpp
